--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
-        <!-- Required meta tags -->
+        <title>Tip Calculator App</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <link rel="stylesheet" href="style.css">
-        <!-- Bootstrap CSS v5.2.1 -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -22,7 +20,47 @@
         <header>
             <!-- place navbar here -->
         </header>
-        <main></main>
+        <main>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!-- Input for Bill Amount -->
+                        <label for="totalBill" class="form-label">Total Bill:</label>
+                        <input type="text" class="form-control" id="totalBill" placeholder="Enter Total Bill"/>
+                    </div>
+                    <div class="col-md-6">
+                        <!-- Input for Number of People -->
+                        <label for="numOfPpl" class="form-label">Number of People:</label>
+                        <input type="text" class="form-control" id="numOfPpl" placeholder="Enter Number of People"/>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <!-- Dropdown For Service Quality -->
+                        <label for="serviceQuality" class="form-label">Service Quality:</label>
+                        <select class="form-select" itemref="serviceQuality">
+                            <option value="Default">Select the Quality of Service (Poor = 5% tip, Good = 10% tip, Great = 20% tip)</option>
+                            <option value="Poor">Poor</option>
+                            <option value="Good">Good</option>
+                            <option value="Great">Great</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6 mt-4 text-center">
+                        <!-- Button to trigger calculation -->
+                        <button class="btn btn-primary" onclick="calculateAndDisplay()">Calculate</button>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-12">
+                        <!-- Results Section -->
+                        <h4>Results:</h4>
+                        <p id="tipResult"></p>
+                        <p id="totalBillResult"></p>
+                        <p id="amtPerPersonResult"></p>
+                    </div>
+                </div>
+            </div>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
