--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <div class="col-md-6">
                         <!-- Dropdown For Service Quality -->
                         <label for="serviceQuality" class="form-label">Service Quality:</label>
-                        <select class="form-select" itemref="serviceQuality">
-                            <option value="Default">Select the Quality of Service (Poor = 5% tip, Good = 10% tip, Great = 20% tip)</option>
+                        <select class="form-select" id="serviceQuality">
+                            <option value="Default">Select the Quality of Service (Poor = 10% tip, Good = 15% tip, Great = 20% tip)</option>
                             <option value="Poor">Poor</option>
                             <option value="Good">Good</option>
                             <option value="Great">Great</option>
